<resources>
    <string name="app_name">JuegAlmi</string>
    <string name="tabArriba1">Todo</string>
    <string name="tabArriba2">Videojuegos</string>
    <string name="tabArriba3">Consolas</string>
    <string name="tabArriba4">Móviles</string>
    <string name="botonAbajo1">Productos</string>
    <string name="botonAbajo2">Reparaciones</string>
    <string name="botonAbajo3">Ubicación</string>
    <string name="botonAbajo4">Galería</string>
    <string name="botonAbajo5">Sobre Nosotros</string>

    <string name="Titulo2">¿Cuál es tu incidencia?</string>
    <string name="Titulo5">¿Quiénes somos?</string>

    <string name="Subtitulo2a">Tipo de dispositivo:</string>
    <string name="Subtitulo2b">Problema:</string>

    <string name="mapa">Puedes encontrarnos en:</string>
    <string name="ubicacion">Agirre Lehendakariaren Etorb., 29, 48014 Bilbo, Bizkaia</string>

    <string name="descripcion">Descripción del problema</string>
    <string name="enviar">ENVIAR</string>
    <string name="iniciar">INICIAR SESIÓN</string>
    <string name="cuenta">¿No tienes cuenta?</string>
    <string name="registrate">Regístrate</string>
    <string name="crear">Crear Cuenta</string>

    <string name="email">E-mail</string>
    <string name="emailP">E-mail:</string>
    <string name="contrasenya">Contraseña</string>
    <string name="contrasenyaP">Contraseña:</string>
    <string name="caracteres">Mínimo 8 caracteres incluyendo minúscula, mayúscula, un número y un carácter especial.</string>
    <string name="recontrasenya">Repetir Contraseña</string>
    <string name="recontrasenyaP">Repetir Contraseña:</string>
    <string name="nombre">Nombre</string>
    <string name="nombreP">Nombre:</string>
    <string name="apellido1">Primer Apellido</string>
    <string name="apellido1P">Primer Apellido:</string>
    <string name="apellido2">Segundo Apellido</string>
    <string name="apellido2P">Segundo Apellido:</string>
    <string name="telefono">(+34)</string>
    <string name="telefonoP">Teléfono móvil:</string>
    <string name="direccion">Dirección</string>
    <string name="direccionP">Dirección:</string>
    <string name="numero">Número</string>
    <string name="numeroP">Número:</string>
    <string name="piso">Piso</string>
    <string name="pisoP">Piso:</string>
    <string name="cp">Código Postal</string>
    <string name="cpP">Código Postal:</string>
    <string name="ciudad">Ciudad</string>
    <string name="ciudadP">Ciudad:</string>
    <string name="provincia">Provincia</string>
    <string name="provinciaP">Provincia:</string>
    <string name="pais">País</string>
    <string name="paisP">País:</string>

    <string name="datos">Datos Personales</string>
    <string name="pedidos">Mis Pedidos</string>
    <string name="alquileres">Mis Alquileres</string>
    <string name="reparaciones">Mis Reparaciones</string>
    <string name="cerrar">CERRAR SESIÓN</string>
    <string name="guardar">GUARDAR CAMBIOS</string>
    <string name="detalle">Ver detalle</string>

    <string name="numPedido">Nº Pedido</string>
    <string name="total">Total</string>
    <string name="numAlquiler">Nº Alquiler</string>
    <string name="numReparacion">Nº Reparación</string>

    <string name="plataforma">Plataforma:</string>
    <string name="categorias">Categorías:</string>
    <string name="precioAlquiler">Precio Alquiler:</string>
    <string name="precioCompra">Precio Compra:</string>
    <string name="anyadirCesta">AÑADIR A LA CESTA</string>
    <string name="alquilar">ALQUILAR</string>
    <string name="marca">Marca:</string>
    <string name="procesador">Procesador:</string>
    <string name="pantalla">Pantalla:</string>
    <string name="numMandos">Nº Mandos:</string>
    <string name="plataformas">Plataformas:</string>
    <string name="precio">Precio:</string>
    <string name="tramitar">TRAMITAR PEDIDO</string>

    <string name="buscar">Buscar...</string>
    <string name="cambiarFoto">Cambiar foto</string>
    <string name="quitarFoto">Quitar foto</string>
    <string name="fechaInicio">Fecha Inicio: </string>
    <string name="fechaFin">Fecha Fin: </string>
    <string name="comentario">Comentario: </string>
    <string name="almacenamiento">Almacenamiento:</string>
    <string name="ram">RAM:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>