<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".botonesAbajo.Reparaciones">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:background="@color/colorTab"
        android:orientation="horizontal">

        <TextView
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/botonAbajo2"
            style="@style/estiloTitulo"
            />

        <ImageButton
            android:id="@+id/imgCesta"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cesta" />

        <ImageButton
            android:id="@+id/imgUsuario"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/usuario" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="290dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:text="@string/Titulo2"
            style="@style/estiloTitulo"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:text="@string/Subtitulo2a"
            style="@style/estiloSubtitulo"
            />

        <Spinner
            android:id="@+id/spDispositivo"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            />

        <TextView
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:text="@string/Subtitulo2b"
            style="@style/estiloSubtitulo"
            />

        <EditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:padding="10dp"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:scrollbars="vertical"
            android:hint="@string/descripcion"
            android:background="@color/colorTab"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:id="@+id/btnEnviar"
            android:text="@string/enviar"
            android:backgroundTint="@color/colorTabSeleccionado"
            android:textColor="@color/black"
            style="@style/estiloTexto"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>